数据驱动界面代码（单向数据流）

--- a/app/index.html
+++ b/app/index.html
@@ -6,19 +6,19 @@
 </head>
 <body>
 <div class="jhAppWrap" id="jhAppWrap"></div>
-<div class="nav_tab">
-	<div class="nav_bar" data-clickstate="1" data-key="intro">
-		<i class="nav_photos"></i>
-		<span>简介</span>
-	</div>
-	<div class="nav_bar" data-clickstate="1" data-key="project">
-		<i class="nav_albums"></i>
-		<span>项目</span>
-	</div>
-	<div class="nav_bar" data-clickstate="1" data-key="skills">
-		<i class="nav_browsers"></i>
-		<span>技能</span>
-	</div>
-</div>
+<!--<div class="nav_tab">-->
+<!--<div class="nav_bar" data-clickstate="1" data-key="intro">-->
+<!--<i class="nav_photos"></i>-->
+<!--<span>简介</span>-->
+<!--</div>-->
+<!--<div class="nav_bar" data-clickstate="1" data-key="project">-->
+<!--<i class="nav_albums"></i>-->
+<!--<span>项目</span>-->
+<!--</div>-->
+<!--<div class="nav_bar" data-clickstate="1" data-key="skills">-->
+<!--<i class="nav_browsers"></i>-->
+<!--<span>技能</span>-->
+<!--</div>-->
+<!--</div>-->
 </body>
 </html>
