数据驱动界面代码（单向数据流）

--- a/app/spa/learn/dataEngine.html
+++ b/app/spa/learn/dataEngine.html
@@ -5,27 +5,47 @@
 	<title>Title</title>
 </head>
 <body>
-<div id="testdiv">
-	<div>
-		<div>
-			<span>1</span>
-		</div>
-		<div>
-			<span>1</span>
-		</div>
-	</div>
-	<div>
-		<div>
-			<span>1</span>
-		</div>
-		<div>
-			<span>1</span>
-			<div>
-				<span>1</span>
-			</div>
-		</div>
-	</div>
+<div id="app">
+	{{ message }}
 </div>
 </body>
-<script src="./learnDefaultProprety.js" type="text/javascript"></script>
+<!--<script src="./dataEngine.js" type="text/javascript"></script>-->
+<script src="./vue.js" type="text/javascript"></script>
+<script>
+
+    var app = new Vue({
+        el: '#app',
+        data: {
+            message: 'Hello Vue!'
+        }
+    })
+
+    //    var template =
+    //        '<div class="{{classname1}} test {{classname2}}" data-age="{{data1}}测试自定义属性{{data2}}">' +
+    //        '   <span class="{{spanclass}}">{{name}}</span>' +
+    //        '</div>' +
+    //        '<input class="input" type="text" value="">';
+    //
+    //    var he = new window.He({
+    //        htmlstr: template,
+    //        data: {
+    //            name: '张三',
+    //            classname1: 'test1',
+    //            classname2: 'test2',
+    //            data1: 'set1',
+    //            spanclass: 'spanclass',
+    //            data2: 'set2',
+    //            inputclass: 'name'
+    //        }
+    //    });
+    //    document.body.appendChild(he.element);
+    //
+    //
+    //    var input = document.querySelector('.input');
+    //    input.value = he.data.name;
+    //    input.addEventListener("input", function (event) {
+    //        he.data.classname1 = input.value;
+    //    });
+
+</script>
 </html>
