--- a/app/spa/learn/dataEngine.html
+++ b/app/spa/learn/dataEngine.html
@@ -5,7 +5,7 @@
 	<title>Title</title>
 </head>
 <body>
-<div id="app">{{test.test2}}</div>
+<div id="app" class="message">{{test.test2}}</div>
 </body>
 <!--<script src="./dataEngine.js" type="text/javascript"></script>-->
 <script src="./vue_test.js" type="text/javascript"></script>
